--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.6
   bloc_concurrency: ^0.2.5
   shared_preferences: ^2.2.3
@@ -20,11 +20,14 @@ dependencies:
   realm: ^3.2.0
   equatable: ^2.0.5
   flutter_animate: ^4.5.0
+  uuid: ^4.4.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  build_runner: 2.4.11
+  auto_route_generator: 8.0.0
   flutter_lints: ^3.0.0
 
 flutter:
