--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  bloc: 8.1.4
   flutter_bloc: ^8.1.6
   bloc_concurrency: ^0.2.5
   shared_preferences: ^2.2.3
