--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_animate: ^4.5.0
   uuid: ^4.4.2
   flutter_staggered_grid_view: ^0.7.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
