--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   uuid: ^4.4.2
   flutter_staggered_grid_view: ^0.7.0
   intl: ^0.19.0
+  flutter_staggered_animations: ^1.1.1
+
+  # scroll_to_index: ^3.0.1
 
 dev_dependencies:
   flutter_test:
