--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   intl: ^0.19.0
   flutter_staggered_grid_view: ^0.7.0
   flutter_staggered_animations: ^1.1.1
+  stream_transform: ^2.1.0
 
 dev_dependencies:
   flutter_test:
